// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`themes >> systemBottomSheet Should NOT render systemBottomSheet Should not render bottom sheet 1`] = `null`;

exports[`themes >> systemBottomSheet Should render systemBottomSheet box with no children Render snapshot correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgba(0,0,0,.5)",
        "bottom": 0,
        "display": "flex",
        "justifyContent": "flex-end",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderTopLeftRadius": 16,
          "borderTopRightRadius": 16,
          "display": "flex",
          "flex": 1,
          "justifyContent": "flex-end",
          "paddingBottom": 8,
          "paddingTop": 24,
        },
      ]
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#f4f5f5",
          "borderRadius": 8,
          "marginBottom": 24,
          "marginTop": 24,
          "opacity": 1,
          "padding": 16,
          "width": "90%",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#000000",
              "display": "flex",
              "fontSize": 16,
              "fontWeight": "600",
              "lineHeight": 20,
              "textAlign": "center",
            },
          ]
        }
      >
        Close
      </Text>
    </View>
  </View>
</View>
`;

exports[`themes >> systemBottomSheet Should render systemBottomSheet with children Should render bottom sheet with text 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgba(0,0,0,.5)",
        "bottom": 0,
        "display": "flex",
        "justifyContent": "flex-end",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderTopLeftRadius": 16,
          "borderTopRightRadius": 16,
          "display": "flex",
          "flex": 1,
          "justifyContent": "flex-end",
          "paddingBottom": 8,
          "paddingTop": 24,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "display": "flex",
          },
        ]
      }
    >
      Hi there
    </Text>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#f4f5f5",
          "borderRadius": 8,
          "marginBottom": 24,
          "marginTop": 24,
          "opacity": 1,
          "padding": 16,
          "width": "90%",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#000000",
              "display": "flex",
              "fontSize": 16,
              "fontWeight": "600",
              "lineHeight": 20,
              "textAlign": "center",
            },
          ]
        }
      >
        Close
      </Text>
    </View>
  </View>
</View>
`;
